--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.13.0",
+    "@vueuse/integrations": "^9.13.0",
+    "fuse.js": "^6.6.2",
     "pinia": "^2.0.17",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
