--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vueuse/core": "^9.13.0",
     "@vueuse/integrations": "^9.13.0",
+    "axios": "^1.4.0",
     "fuse.js": "^6.6.2",
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^2.1.1",
@@ -21,7 +22,7 @@
   "devDependencies": {
     "@types/node": "^18.13.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "typescript": "^4.9.3",
+    "typescript": "^5.0.4",
     "vite": "^4.1.0",
     "vite-svg-loader": "^3.4.0",
     "vue-tsc": "^1.0.24"
